<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="qr_code_option">QR Code</string>
    <string name="qr_code">QR Code: %1$s</string>
    <string name="expired">Expired</string>
    <string name="refresh">Refresh</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="close">Close</string>
    <string name="scanned_code">Scanned QR Code</string>
    <string name="scan">Scan</string>
    <string name="fab">Floating action button</string>
    <string name="item">Item</string>
    <string name="error_gen">Error generating QR code, please try again</string>
    <string name="loading">Loading</string>
    <string name="expires_in">Expires in %02d:%02d:%02d</string>
    <string name="qr_gen_code">Please generate you QR by tapping the button below</string>
    <string name="generate">Generate</string>

    <string name="grant_permission">Grant permission</string>
    <string name="ok">Ok</string>
    <string name="permissions_required">Permission required</string>
    <string name="record_permanently_declined">It seems that you have permanently declined record audio permission. You can go to the app settings to grant it.</string>
    <string name="ask_record_permission">This app needs acces to record audio so you can start to find your phone listening to your whistles or claps</string>
    <string name="notification_permanently_declined">It seems that you have permanently declined camera permission. You can go to the app settings to grant it</string>
    <string name="ask_camera_permission">This app requires the camera permission to remain functional, it allow the user to scan QR codes</string>
    <string name="confirm">Accept</string>
    <string name="decline">Decline</string>

</resources>